APPS-1460 Add restartableEntryPoints set to all for nextflow pipeline applets (#863)

--- a/src/python/dxpy/templating/templates/nextflow/dxapp.json
+++ b/src/python/dxpy/templating/templates/nextflow/dxapp.json
@@ -60,6 +60,7 @@
   ],
   "runSpec": {
     "headJobOnDemand": true,
+    "restartableEntryPoints": "all",
     "interpreter": "bash",
     "execDepends": [],
     "distribution": "Ubuntu",
