--- a/src/python/dxpy/templating/templates/nextflow/dxapp.json
+++ b/src/python/dxpy/templating/templates/nextflow/dxapp.json
@@ -8,7 +8,7 @@
     {
       "name": "nextflow_run_opts",
       "label": "Nextflow Run Options",
-      "help": "Additional run arguments for Nextflow (e.g. -profile).",
+      "help": "Additional run arguments for Nextflow (e.g. -profile docker).",
       "class": "string",
       "group": "Nextflow options",
       "optional": true
@@ -39,8 +39,9 @@
     {
       "name": "debug",
       "label": "Debug Mode",
-      "help": "Shows additional information in the job logs. If true, the execution log messages from Nextflow will also be included.",
+      "help": "Shows additional information in the job log. If true, the execution log messages from Nextflow will also be included.",
       "class": "boolean",
+      "group": "Advanced Executable Development Options",
       "default": false
     },
     {
@@ -48,6 +49,7 @@
       "label": "Resume",
       "help": "Unique ID of the previous session to be resumed. If 'true' or 'last' is provided instead of the sessionID, will resume the latest resumable session run by an applet with the same name in the current project in the last 6 months.",
       "class": "string",
+      "group": "Advanced Executable Development Options",
       "optional": true
     },
     {
@@ -55,6 +57,7 @@
       "label": "Preserve Cache",
       "help": "Enable storing pipeline cache and local working files to the current project. If true, local working files and cache files will be uploaded to the platform, so the current session could be resumed in the future",
       "class": "boolean",
+      "group": "Advanced Executable Development Options",
       "default": false
     }
   ],
