--- a/src/python/dxpy/templating/templates/nextflow/dxapp.json
+++ b/src/python/dxpy/templating/templates/nextflow/dxapp.json
@@ -93,7 +93,7 @@
     "network": [
       "*"
     ],
-    "project": "CONTRIBUTE",
+    "project": "UPLOAD",
     "allProjects": "VIEW"
   },
   "ignoreReuse": true
