--- a/src/python/test/nextflow/profile/nextflow.config
+++ b/src/python/test/nextflow/profile/nextflow.config
@@ -3,5 +3,5 @@ process.container = 'quay.io/nextflow/bash'
 
 profiles {
     test      { includeConfig 'conf/test.config' }
-    second      { includeConfig 'conf/test.config' }
+    second      { includeConfig 'conf/second.config' }
 }
