--- a/.github/workflows/toolkit-build-ubuntu-2204.yml
+++ b/.github/workflows/toolkit-build-ubuntu-2204.yml
@@ -9,6 +9,9 @@ jobs:
   toolkit-build-ubuntu-2204:
     runs-on: ubuntu-22.04
     steps:
-      - name: dx-toolkit python make target
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: python make target
         run: |
           make python
