--- a/.github/workflows/toolkit-build-ubuntu-2204.yml
+++ b/.github/workflows/toolkit-build-ubuntu-2204.yml
@@ -7,7 +7,8 @@ on:
 
 jobs:
   toolkit-build-ubuntu-2204:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
+    container: ubuntu:22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v3
