--- a/.github/workflows/toolkit-build-ubuntu-2204.yml
+++ b/.github/workflows/toolkit-build-ubuntu-2204.yml
@@ -15,4 +15,7 @@ jobs:
 
       - name: python make target
         run: |
+          apt install python-is-python3 python3-venv python3-dev \
+            libssl-dev \ libffi-dev flex bison build-essential cmake \
+            libboost-all-dev curl libcurl4-openssl-dev
           make python
