--- a/.github/workflows/toolkit-build-ubuntu-2204.yml
+++ b/.github/workflows/toolkit-build-ubuntu-2204.yml
@@ -17,6 +17,6 @@ jobs:
         run: |
           apt-get update && apt-get install -y \
             python-is-python3 python3-venv python3-dev \
-            libssl-dev \ libffi-dev flex bison build-essential cmake \
+            libssl-dev libffi-dev flex bison build-essential cmake \
             libboost-all-dev curl libcurl4-openssl-dev
           make python
