--- a/.github/workflows/toolkit-build-ubuntu-2204.yml
+++ b/.github/workflows/toolkit-build-ubuntu-2204.yml
@@ -13,10 +13,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: python make target
+      - name: Default make target
         run: |
           apt-get update && apt-get install -y \
             python-is-python3 python3-venv python3-dev \
             libssl-dev libffi-dev flex bison build-essential cmake \
             libboost-all-dev curl libcurl4-openssl-dev
-          make python
+          make
+
+      - name: Build verification test
+        run: |
+          source environment
+          dx --version
+          dx-verify-file --version
