--- a/.github/workflows/toolkit-build-ubuntu-2204.yml
+++ b/.github/workflows/toolkit-build-ubuntu-2204.yml
@@ -13,12 +13,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Default make target
+      - name: Install build dependencies
         run: |
           apt-get update && apt-get install -y \
             python-is-python3 python3-venv python3-dev \
             libssl-dev libffi-dev flex bison build-essential cmake \
             libboost-all-dev curl libcurl4-openssl-dev
+
+      - name: Default make target
+        run: |
           make
 
       - name: Build verification test
