Skip dx-verify-file for now

--- a/.github/workflows/toolkit-build-ubuntu-2204.yml
+++ b/.github/workflows/toolkit-build-ubuntu-2204.yml
@@ -31,4 +31,4 @@ jobs:
         run: |
           source environment
           dx --version
-          dx-verify-file --version
+          #dx-verify-file --version
