Try default target again

--- a/.github/workflows/toolkit-build-ubuntu-2204.yml
+++ b/.github/workflows/toolkit-build-ubuntu-2204.yml
@@ -31,4 +31,9 @@ jobs:
         run: |
           source environment
           dx --version
-          #dx-verify-file --version
+
+      - name: Default make target
+        run: |
+          make 
+          source environment
+          dx-verify-file --version
