--- a/.github/workflows/toolkit-build-ubuntu-2204.yml
+++ b/.github/workflows/toolkit-build-ubuntu-2204.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Python make target
         run: |
           make python
+          cat build/info/version
 
       - name: Build verification test
         run: |
