--- a/.github/workflows/toolkit-build-ubuntu-2204.yml
+++ b/.github/workflows/toolkit-build-ubuntu-2204.yml
@@ -19,7 +19,7 @@ jobs:
       - name: DEBUG
         run: |
           pwd
-          apt-get update && apt-get install -y build-essential
+          apt-get update && apt-get install -y build-essential git python-is-python3 python3-venv python3-dev
           source environment
           echo $DNANEXUS_HOME
           echo "Git contents"
