--- a/.github/workflows/toolkit-build-ubuntu-2204.yml
+++ b/.github/workflows/toolkit-build-ubuntu-2204.yml
@@ -13,6 +13,14 @@ jobs:
       run:
         shell: bash
     steps:
+      # Work around issue where the checkout action falls back to
+      # the github API to download instead of the git CLI, which
+      # results in a missing .git directory - see:
+      # https://github.com/actions/checkout/issues/335
+      - name: Update git
+        run: |
+          apt-get update && apt-get install -y git
+
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -21,7 +29,7 @@ jobs:
       - name: DEBUG
         run: |
           pwd
-          apt-get update && apt-get install -y build-essential git python-is-python3 python3-venv python3-dev
+          apt-get update && apt-get install -y build-essential python-is-python3 python3-venv python3-dev
           source environment
           echo $DNANEXUS_HOME
           echo "Git contents"
@@ -34,7 +42,7 @@ jobs:
       - name: Install build dependencies
         run: |
           apt-get update && apt-get install -y \
-            git python-is-python3 python3-venv python3-dev \
+            python-is-python3 python3-venv python3-dev \
             libssl-dev libffi-dev flex bison build-essential cmake \
             libboost-all-dev curl libcurl4-openssl-dev
 
