--- a/.github/workflows/toolkit-build-ubuntu-2204.yml
+++ b/.github/workflows/toolkit-build-ubuntu-2204.yml
@@ -13,9 +13,9 @@ jobs:
       run:
         shell: bash
     steps:
-      # Work around issue where the checkout action falls back to
-      # the github API to download instead of the git CLI, which
-      # results in a missing .git directory - see:
+      # Work around an issue where the checkout action falls back to
+      # the github API instead of the git CLI, which results in a
+      # missing .git directory - see:
       # https://github.com/actions/checkout/issues/335
       - name: Update git
         run: |
@@ -25,6 +25,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 1
+          set-safe-directory: true
 
       - name: DEBUG
         run: |
