--- a/.github/workflows/toolkit-build-ubuntu-2204.yml
+++ b/.github/workflows/toolkit-build-ubuntu-2204.yml
@@ -25,7 +25,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 1
-          set-safe-directory: true
+          #set-safe-directory: true # Doesn't seem to work in a container
+
+      # Workaround for https://github.com/actions/runner/issues/2033
+      - name: Set checkout dir ownership
+        run: |
+          git config --global --add safe.directory /__w/dx-toolkit/dx-toolkit
 
       - name: DEBUG
         run: |
