--- a/.github/workflows/toolkit-build-ubuntu-2204.yml
+++ b/.github/workflows/toolkit-build-ubuntu-2204.yml
@@ -24,49 +24,47 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0
+          fetch-depth: 0 # Required to complete toolkit make targets
           #set-safe-directory: true # Doesn't seem to work in a container
 
       # Workaround for https://github.com/actions/runner/issues/2033
-      - name: Set checkout dir ownership
+      - name: Mark git checkout dir safe
         run: |
           git config --global --add safe.directory /__w/dx-toolkit/dx-toolkit
 
-      - name: DEBUG
-        run: |
-          pwd
-          apt-get update && apt-get install -y build-essential python-is-python3 python3-venv python3-dev
-          source environment
-          echo $DNANEXUS_HOME
-          echo "Git contents"
-          ls -la $DNANEXUS_HOME/.git
-          make toolkit_version
-          #ls -1R /__w/dx-toolkit/dx-toolkit
-          ls -la /__w/dx-toolkit/dx-toolkit/build/info
-          echo "contents of /__w/dx-toolkit/dx-toolkit/src/../build/info/version"
-          cat /__w/dx-toolkit/dx-toolkit/src/../build/info/version
-          echo "contents of /__w/dx-toolkit/dx-toolkit/src/python/dxpy/toolkit_version.py"
-          cat /__w/dx-toolkit/dx-toolkit/src/python/dxpy/toolkit_version.py
+      #- name: DEBUG
+      #  run: |
+      #    pwd
+      #    apt-get update && apt-get install -y build-essential python-is-python3 python3-venv python3-dev
+      #    source environment
+      #    echo $DNANEXUS_HOME
+      #    echo "Git contents"
+      #    ls -la $DNANEXUS_HOME/.git
+      #    make toolkit_version
+      #    echo "contents of /__w/dx-toolkit/dx-toolkit/src/../build/info/version"
+      #    cat /__w/dx-toolkit/dx-toolkit/src/../build/info/version
+      #    echo "contents of /__w/dx-toolkit/dx-toolkit/src/python/dxpy/toolkit_version.py"
+      #    cat /__w/dx-toolkit/dx-toolkit/src/python/dxpy/toolkit_version.py
 
       - name: Install build dependencies
         run: |
-          apt-get update && apt-get install -y \
+          apt-get install -y \
             python-is-python3 python3-venv python3-dev \
             libssl-dev libffi-dev flex bison build-essential cmake \
             libboost-all-dev curl libcurl4-openssl-dev
 
-      - name: Python make target
+      - name: Default make target
         run: |
-          make python
-          cat build/info/version
+          source environment
+          make 
 
       - name: Build verification test
         run: |
           source environment
           dx --version
-
-      - name: Default make target
-        run: |
-          make 
-          source environment
           dx-verify-file --version
+
+      #- name: Python make target
+      #  run: |
+      #    make python
+      #    cat build/info/version
