--- a/.github/workflows/toolkit-build-ubuntu-2204.yml
+++ b/.github/workflows/toolkit-build-ubuntu-2204.yml
@@ -57,8 +57,7 @@ jobs:
       - name: Default make target
         run: |
           source environment
-          #make 
-          make dxcpp
+          make 
 
       - name: Build verification test
         run: |
