--- a/.github/workflows/toolkit-build-ubuntu-2204.yml
+++ b/.github/workflows/toolkit-build-ubuntu-2204.yml
@@ -21,6 +21,8 @@ jobs:
       - name: Install git before checkout
         run: |
           apt-get update && apt-get install -y git
+          # Workaround for https://github.com/actions/runner/issues/2033
+          git config --global --add safe.directory /__w/dx-toolkit/dx-toolkit
 
       - name: Checkout
         uses: actions/checkout@v3
@@ -29,9 +31,9 @@ jobs:
           #set-safe-directory: true # Doesn't seem to work in a container
 
       # Workaround for https://github.com/actions/runner/issues/2033
-      - name: Mark git checkout dir safe
-        run: |
-          git config --global --add safe.directory /__w/dx-toolkit/dx-toolkit
+      #- name: Mark git checkout dir safe
+      #  run: |
+      #    git config --global --add safe.directory /__w/dx-toolkit/dx-toolkit
 
       #- name: DEBUG
       #  run: |
