--- a/.github/workflows/toolkit-build-ubuntu-2204.yml
+++ b/.github/workflows/toolkit-build-ubuntu-2204.yml
@@ -26,14 +26,9 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0 # Required to complete toolkit make targets
-          #set-safe-directory: true # Doesn't seem to work in a container
-
-      # Workaround for https://github.com/actions/runner/issues/2033
-      #- name: Mark git checkout dir safe
-      #  run: |
-      #    git config --global --add safe.directory /__w/dx-toolkit/dx-toolkit
+        #with:
+        #  fetch-depth: 0 # Required to complete toolkit make targets
+        #  #set-safe-directory: true # Doesn't seem to work in a container
 
       #- name: DEBUG
       #  run: |
