--- a/.github/workflows/toolkit-build-ubuntu-2204.yml
+++ b/.github/workflows/toolkit-build-ubuntu-2204.yml
@@ -26,8 +26,8 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v3
-        #with:
-        #  fetch-depth: 0 # Required to complete toolkit make targets
+        with:
+          fetch-depth: 0 # Required for src/python/setup.py to function
         #  #set-safe-directory: true # Doesn't seem to work in a container
 
       #- name: DEBUG
