--- a/.github/workflows/toolkit-build-ubuntu-2204.yml
+++ b/.github/workflows/toolkit-build-ubuntu-2204.yml
@@ -1,12 +1,10 @@
-name: upload-agent-build-ubuntu-2204
+name: toolkit-build-ubuntu-2204
 
 on:
   workflow_dispatch:
 
-  pull_request:
-
 jobs:
-  upload-agent-build-ubuntu-2204:
+  toolkit-build-ubuntu-2204:
     runs-on: ubuntu-latest
     container: ubuntu:22.04
     defaults:
@@ -35,15 +33,15 @@ jobs:
           apt-get install -y \
             python-is-python3 python3-venv python3-dev \
             libssl-dev libffi-dev flex bison build-essential cmake \
-            libboost-all-dev curl libcurl4-openssl-dev \
-            libbz2-dev
-            # libidn12 libidn-dev
+            libboost-all-dev curl libcurl4-openssl-dev
 
-      - name: Upload agent make target
+      - name: Default make target
         run: |
-          cd src
-          make ua
+          source environment
+          make 
 
-      #- name: Build verification test
-      #  run: |
-      #    ua --version
+      - name: Build verification test
+        run: |
+          source environment
+          dx --version
+          dx-verify-file --version
