--- a/.github/workflows/upload-agent-build-ubuntu-2204.yml
+++ b/.github/workflows/upload-agent-build-ubuntu-2204.yml
@@ -36,8 +36,7 @@ jobs:
             python-is-python3 python3-venv python3-dev \
             libssl-dev libffi-dev flex bison build-essential cmake \
             libboost-all-dev curl libcurl4-openssl-dev \
-            libbz2-dev
-            # libidn12 libidn-dev
+            libbz2-dev libidn12 libidn-dev
 
       - name: Upload agent make target
         run: |
