--- a/.github/workflows/upload-agent-build-ubuntu-2204.yml
+++ b/.github/workflows/upload-agent-build-ubuntu-2204.yml
@@ -40,6 +40,7 @@ jobs:
 
       - name: Upload agent make target
         run: |
+          source environment
           cd src
           make ua
 
