Add UA test step

--- a/.github/workflows/upload-agent-build-ubuntu-2204.yml
+++ b/.github/workflows/upload-agent-build-ubuntu-2204.yml
@@ -44,6 +44,6 @@ jobs:
           cd src
           make ua
 
-      #- name: Build verification test
-      #  run: |
-      #    ua --version
+      - name: Build verification test
+        run: |
+          ./ua/dist/ua --version
