Fix path to ua binary

--- a/.github/workflows/upload-agent-build-ubuntu-2204.yml
+++ b/.github/workflows/upload-agent-build-ubuntu-2204.yml
@@ -46,4 +46,6 @@ jobs:
 
       - name: Build verification test
         run: |
-          ./ua/dist/ua --version
+          source environment
+          which ua
+          ua --version
