--- a/.github/workflows/upload-agent-build-ubuntu-2204.yml
+++ b/.github/workflows/upload-agent-build-ubuntu-2204.yml
@@ -18,12 +18,12 @@ jobs:
       # our legacy build targets (like dx-verify-file) run into problems
       # creating version strings. See:
       # https://github.com/actions/checkout/issues/335
-      - name: Install git before checkout
-        run: |
-          apt-get update && apt-get install -y git
-          # Workaround for safe dir issue when using 'container:' - see:
-          # https://github.com/actions/runner/issues/2033
-          git config --global --add safe.directory ${GITHUB_WORKSPACE}
+      #- name: Install git before checkout
+      #  run: |
+      #    apt-get update && apt-get install -y git
+      #    # Workaround for safe dir issue when using 'container:' - see:
+      #    # https://github.com/actions/runner/issues/2033
+      #    git config --global --add safe.directory ${GITHUB_WORKSPACE}
 
       - name: Checkout
         uses: actions/checkout@v3
@@ -33,7 +33,7 @@ jobs:
       - name: Install build dependencies
         run: |
           apt-get install -y \
-            python-is-python3 python3-venv python3-dev \
+            git python-is-python3 python3-venv python3-dev \
             libssl-dev libffi-dev flex bison build-essential cmake \
             libboost-all-dev curl libcurl4-openssl-dev \
             libbz2-dev libidn12 libidn-dev
