--- a/.github/workflows/upload-agent-build-ubuntu-2204.yml
+++ b/.github/workflows/upload-agent-build-ubuntu-2204.yml
@@ -21,8 +21,7 @@ jobs:
       - name: Install build dependencies
         run: |
           apt-get update && apt-get install -y \
-            #git python-is-python3 python3-venv python3-dev \
-            git python-is-python3 python3-venv python3-dev \
+            python-is-python3 python3-venv python3-dev \
             libssl-dev libffi-dev flex bison build-essential cmake \
             libboost-all-dev curl libcurl4-openssl-dev \
             libbz2-dev libidn12 libidn-dev
