--- a/src/python/requirements.txt
+++ b/src/python/requirements.txt
@@ -1,6 +1,7 @@
 argcomplete>=2.0.0; python_version >= "3.10"
 argcomplete>=1.9.4,<2.0.0; python_version < "3.10"
-websocket-client==0.54.0
+websocket-client==0.54.0; python_version < "3.7"
+websocket-client>=1.0,<=1.5.1; python_version >= "3.7"
 python-dateutil>=2.5
 psutil>=5.9.3
 requests>=2.8.0,<=2.27.1
