--- a/src/python/requirements.txt
+++ b/src/python/requirements.txt
@@ -10,4 +10,6 @@ cryptography>=3.4.2,<41; python_version > "3.5"
 gnureadline==8.0.0; sys_platform == "darwin" and python_version < "3.9" and platform_machine == "x86_64"
 pyreadline==2.1; sys_platform == "win32" and python_version < "3.5"
 pyreadline3==3.4.1; sys_platform == "win32" and python_version >= "3.5"
-colorama==0.4.4; sys_platform == "win32"
+colorama>=0.4.4,<=0.4.6; sys_platform == "win32" and python_version == "2.7"
+colorama==0.4.4; sys_platform == "win32" and python_version >= "3.5" and python_version < "3.7"
+colorama>=0.4.4,<=0.4.6; sys_platform == "win32" and python_version >= "3.7"
