--- a/src/python/dxpy/templating/templates/nextflow/dxapp.json
+++ b/src/python/dxpy/templating/templates/nextflow/dxapp.json
@@ -59,6 +59,15 @@
       "class": "boolean",
       "group": "Advanced Executable Development Options",
       "default": false
+    },
+    {
+      "name": "nextflow_soft_confs",
+      "label": "Soft Configuration File",
+      "help": "(Optional) One or more nextflow configuration files to be appended to the Nextflow pipeline configuration set",
+      "class": "array:file",
+      "patterns": ["*.config"],
+      "optional": true,
+      "group": "Nextflow options"
     }
   ],
   "outputSpec": [
@@ -90,9 +99,7 @@
   },
   "categories": [],
   "access": {
-    "network": [
-      "*"
-    ],
+    "network": ["*"],
     "project": "UPLOAD",
     "allProjects": "VIEW"
   },
