--- a/src/python/requirements_test.txt
+++ b/src/python/requirements_test.txt
@@ -1,6 +1,7 @@
 pexpect==4.6
 mock==2.0.0
-pytest==7.4.2
+pytest==7.4.2; python_version >= "3"
+pytest==4.6.9; python_version < "3"
 pytest-xdist==3.3.1; python_version >= "3"
 pytest-xdist==1.31.0; python_version < "3"
 pytest-timeout==2.1.0; python_version >= "3"
