--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,7 @@ dxR.Rcheck
 /bin/proot
 /bin/pbr
 /bin/xattr
+/bin/normalizer
 /bin/wsdump.py
 /bin/dx-su-contrib
 /src/python/test/*.traceability.*.csv
