--- a/src/python/requirements_test.txt
+++ b/src/python/requirements_test.txt
@@ -1,14 +1,9 @@
 pexpect==4.6
 mock==2.0.0
-pytest==7.4.2; python_version >= "3"
-pytest==4.6.9; python_version < "3"
-pytest-xdist==3.3.1; python_version >= "3"
-pytest-xdist==1.31.0; python_version < "3"
-pytest-timeout==2.1.0; python_version >= "3"
-pytest-timeout==1.3.4; python_version < "3"
-more-itertools<=6.0.0; python_version <= "3.5"
+pytest==7.4.2
+pytest-xdist==3.3.1
+pytest-timeout==2.1.0
 parameterized==0.8.1
 pandas==1.3.5; python_version>='3.7'
 pandas>=0.23.3,<=0.25.3; python_version>='3.5.3' and python_version<'3.7'
-pandas>=0.23.3,< 0.25.0; python_version<'3.5.3'
 
