--- a/src/python/requirements.txt
+++ b/src/python/requirements.txt
@@ -3,8 +3,8 @@ argcomplete>=1.9.4,<2.0.0; python_version < "3.10"
 websocket-client==0.54.0
 python-dateutil>=2.5
 psutil>=5.9.3
-requests>=2.8.0,<2.28; python_version < "3.7"
-requests>=2.8.0,<2.29; python_version >= "3.7"
+certifi
+urllib3>=1.26.18,<2.1.0
 cryptography>=3.4.2,<41; python_version > "3.5"
 pyreadline3==3.4.1; sys_platform == "win32" and python_version >= "3.5"
 colorama==0.4.4; sys_platform == "win32" and python_version >= "3.5" and python_version < "3.7"
