feat: add job_get_identity_token api method + bash script

--- a/src/api_wrappers/wrapper_table.json
+++ b/src/api_wrappers/wrapper_table.json
@@ -1033,6 +1033,15 @@
         }
     ],
     [
+        "/job-xxxx/getIdentityToken",
+        "getIdentityToken(req, objectId)",
+        {
+            "retryable": true,
+            "objectMethod": true,
+            "wikiLink": "https://documentation.dnanexus.com/developer/api/running-analyses/applets-and-entry-points#api-method-job-xxxx-getIdentityToken"
+        }
+    ],
+    [
         "/job/new",
         "jobNew(req)",
         {
