For Nextflow Pipeline Applet, remove allProjects: VIEW

--- a/src/python/dxpy/templating/templates/nextflow/dxapp.json
+++ b/src/python/dxpy/templating/templates/nextflow/dxapp.json
@@ -103,8 +103,7 @@
   "categories": [],
   "access": {
     "network": ["*"],
-    "project": "UPLOAD",
-    "allProjects": "VIEW"
+    "project": "UPLOAD"
   },
   "ignoreReuse": true
 }
