--- a/src/python/requirements_test.txt
+++ b/src/python/requirements_test.txt
@@ -8,3 +8,4 @@ pandas==1.3.5; python_version>='3.7'
 pandas>=0.23.3,<=0.25.3; python_version>='3.5.3' and python_version<'3.7'
 numpy<2.0.0
 requests
+filelock
