--- a/src/java/pom.xml
+++ b/src/java/pom.xml
@@ -88,7 +88,7 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>18.0</version>
+      <version>33.4.0-jre</version>
     </dependency>
 
     <dependency>
