--- a/.github/workflows/build-upload-agent.yml
+++ b/.github/workflows/build-upload-agent.yml
@@ -22,6 +22,8 @@ jobs:
         uses: actions/checkout@v4
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to build your code on the runner."
+      - name: Source Environment
+        run: source ./environment
       - name: Change directory to src
         run: cd src
       - name: Run make
