--- a/.github/workflows/build-upload-agent.yml
+++ b/.github/workflows/build-upload-agent.yml
@@ -27,5 +27,5 @@ jobs:
       - name: Change directory to src
         run: cd src
       - name: Run make
-        run: make ua     
+        run: sudo make ua     
       - run: echo "🍏 This job's status is ${{ job.status }}."
